--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -114,6 +114,14 @@
 
 /***** End Styles for small screen navigation *****/
 
+/***** Media queries *****/
+
+@media screen and (max-width: 2000px) {
+  .app__navbar-logo img {
+    width: 210px;
+  }
+}
+
 @media screen and (max-width: 1150px) {
   .app__navbar-links {
     display: none;
@@ -122,4 +130,19 @@
   .app__navbar-smallscreen {
     display: flex;
   }
+}
+
+@media screen and (max-width: 650px) {
+  .app__navbar {
+    padding: 1rem;
+  }
+
+  .app__navbar-login {
+    display: none;
+  }
+
+  .app__navbar-logo img {
+    width: 110px;
+  }
+
 }
