--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,14 @@
   align-items: center;
 }
 
+.app__wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  min-height: 100vh;
+}
+
 .p__opensans {
   font-family: var(--font-alt);
   color: var(--color-white);
