--- a/src/App.css
+++ b/src/App.css
@@ -25,3 +25,14 @@
   line-height: 28px;
   font-size: 16px;
 }
+
+.p__cormorant {
+  font-family: var(--font-base);
+  color: var(--color-white);
+  font-weight: 700;
+  letter-spacing: 0.04em;
+  text-transform: capitalize;
+  font-feature-settings: 'tnum' on, 'lnum' on;
+  line-height: 29.9px;
+  font-size: 23px;
+}
