--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,15 @@
   font-size: 23px;
 }
 
+.headtext__cormorant {
+  font-family: var(--font-base);
+  color: var(--color-golden);
+  font-size: 64px;
+  line-height: 83.2px;
+  letter-spacing: 0.04em;
+  text-transform: capitalize;
+}
+
 .spoon__img {
   width: 45px;
 }
