--- a/src/container/Header/Header.css
+++ b/src/container/Header/Header.css
@@ -29,6 +29,10 @@
   .app__header-img img {
     width: 100%;
   }
+
+  .app__header-h1 {
+    font-size: 65px;
+  }
 }
 
 /***** End media queries *****/
