--- a/src/container/Menu/SpecialMenu.css
+++ b/src/container/Menu/SpecialMenu.css
@@ -50,7 +50,7 @@
   width: 100%;
 }
 
-@media screen and (max-width: 2000px) {
+@media screen and (min-width: 2000px) {
   .app__specialMenu-menu_img {
     width: 650px;
   }
